<resources>
    <string name="app_name">BioMap</string>
    <string name="appLogo">BioMap Logo</string>
    <string name="gridButton">Grid Button</string>
    <string name="menuButton">Menu Button</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="package_name">com.biomap.application.bio_app</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logout_button_main">Logout</string>
    <string name="settings_fragment_title">Settings</string>
    <string name="menu_fragment_title">Menu</string>
    <string name="menu_button_mapping">Mapping</string>
    <string name="menu_button_alerts">Alerts</string>
    <string name="menu_button_analytics">Analytics</string>
    <string name="menu_button_connect">Connect</string>
    <string name="home_fragment_title">Home</string>
    <string name="mapping_activity_title">Mapping</string>
    <string name="connect_activity_title">Connect</string>
    <string name="analytics_activity_title">Vitals</string>
    <string name="alerts_activity_title">Alerts</string>

    <string name="ulcers_check_text">Have you had ulcers in the past?</string>
    <string name="good_night_text">Good Night %1$s</string>
    <string name="login_register_description">Visual Insight into\n your seated health</string>
    <string name="good_morning_text">Good morning,</string>
    <string name="good_afternoon_text">Good Afternoon,</string>
    <string name="good_evening_text">Good Evening,</string>
    <string name="alert_interval"> </string>
    <string name="biomap_logo">BioMap Logo</string>
    <string name="biomap_text_logo">BioMap Text Logo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="first_name_placeholder"></string>
    <string name="continue_text">Continue</string>
    <string name="ulcers_true">You have ulcers</string>
    <string name="ulcers_false">You do not have ulcers</string>
    <string name="notificationsOnOff"></string>
    <string name="register_button">Register</string>
    <string name="sign_in_button">Sign In</string>
    <string name="form_remember_me">Remember me on this device</string>
    <string name="form_ulcer_prompt">Have a history of pressure ulcers</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="submit_button">Submit</string>
    <string name="google_button">Google</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_sign_out">Sign Out</string>
    <string name="drawer_account">Account</string>
    <string name="menu_drawer_header">Menu Drawer Header</string>
    <string name="action_settings">Settings</string>
    <string name="vitals_activity_title">Vitals</string>
    <string name="header_body_temperature">Body Temperature</string>
    <string name="header_blood_pressure">Blood Pressure</string>
    <string name="header_respiratory_rate">Respiratory Rate</string>
    <string name="header_body_mass_index">Body Mass Index</string>
    <string name="header_offloading_frequency">Offloading Frequency</string>

    <string-array name="menu_drawer">
        <item>Home</item>
        <item>Mapping</item>
        <item>Alerts</item>
        <item>Analytics</item>
        <item>Connect</item>
        <item>Settings</item>
    </string-array>

    <!-- Fonts -->
    <string name="font_name_gotham">gotham</string>
    <string name="connect_help_intro_content">We have many resources available for our customers to ensure their safety and to make life easier. If you would like to read more about how to get started using BioMap, please click the link below for a redirection to our web-page. Welcome!</string>
    <string name="connect_help_intro_header">This stuff can be tricky!</string>
    <string name="connect_faq_intro">
        Our community is growing every day - and we all need help sometimes! So, here are some
        frequently asked questions by fellow users:
    </string>
    <string name="account">account_page_title</string>
    <string name="account_page_title">Account</string>

</resources>
