<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.biomap.application.bio_app.Login.LoginRegisterActivity">

    <!-- Start of Main Content -->
    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintVertical_bias="0.498">

        <!-- Logo -->
        <ImageView
            android:id="@+id/logo_login_register_imageview"
            android:layout_width="@dimen/biomap_register_login_logo_dim"
            android:layout_height="@dimen/biomap_register_login_logo_dim"
            android:contentDescription="@string/biomap_logo"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_logo_svg" />

        <!-- Word mark -->
        <ImageView
            android:id="@+id/logo_text_login_register_imageview"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/biomap_text_logo"
            app:srcCompat="@drawable/ic_wordmark_tagline" />

        <!-- Tag-line -->
        <TextView
            android:id="@+id/login_register_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:text="@string/login_register_description"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <!-- Start of Register & Sign in Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/register_button"
                android:layout_width="170dp"
                android:layout_height="35dp"
                android:background="@drawable/button_register"
                android:text="@string/register_button"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="170dp"
                android:layout_height="35dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_signin"
                android:text="@string/sign_in_button"
                android:textSize="12sp"/>

        </LinearLayout>
        <!-- End of Register & Sign in Buttons -->

    </LinearLayout>
    <!-- End of Main Content -->

</android.support.constraint.ConstraintLayout>
