<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:id="@+id/relativeLayout"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/biomap_logo_imageView"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="BioMap Logo"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/biomap_text_imageView"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_logo_white_filled" />

    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="257dp"
        android:layout_height="330dp"
        android:layout_marginRight="7dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="7dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        android:id="@+id/constraintLayout">

        <ImageButton
            android:layout_width="@dimen/menu_icon_dimensions"
            android:layout_height="@dimen/menu_icon_dimensions"
            android:text="@string/menu_button_mapping"
            android:id="@+id/menu_button_mapping"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/menu_icon_shape_mapping"
            app:srcCompat="@drawable/ic_mapping_svg"
            android:scaleType="fitCenter"
            android:scaleX="1"
            android:scaleY="1"
            android:padding="@dimen/menu_icon_padding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mapping_activity_title"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/menu_button_mapping"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="0dp"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="@dimen/h3_font_size"/>

        <ImageButton
            android:layout_width="@dimen/menu_icon_dimensions"
            android:layout_height="@dimen/menu_icon_dimensions"
            android:text="@string/menu_button_alerts"
            android:id="@+id/menu_button_alerts"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:layout_marginRight="8dp"
            android:background="@drawable/menu_icon_shape_alerts"
            app:srcCompat="@drawable/ic_alerts_svg"
            android:scaleType="fitCenter"
            android:scaleX="1"
            android:scaleY="1"
            android:padding="@dimen/menu_icon_padding"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alerts_activity_title"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="38dp"
            android:textAlignment="center"
            android:textSize="@dimen/h3_font_size"
            app:layout_constraintTop_toBottomOf="@+id/menu_button_alerts"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageButton
            android:layout_width="@dimen/menu_icon_dimensions"
            android:layout_height="@dimen/menu_icon_dimensions"
            android:text="@string/menu_button_analytics"
            android:id="@+id/menu_button_analytics"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="40dp"
            android:textSize="20sp"
            android:layout_marginRight="8dp"
            android:background="@drawable/menu_icon_shape_analytics"
            app:srcCompat="@drawable/ic_analytics_svg"
            android:scaleType="fitCenter"
            android:scaleX="1"
            android:scaleY="1"
            android:padding="@dimen/menu_icon_padding"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/analytics_activity_title"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:textAlignment="center"
            android:textSize="@dimen/h3_font_size"
            app:layout_constraintTop_toBottomOf="@+id/menu_button_analytics"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageButton
            android:layout_width="@dimen/menu_icon_dimensions"
            android:layout_height="@dimen/menu_icon_dimensions"
            android:text="@string/menu_button_connect"
            android:id="@+id/menu_button_connect"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="40dp"
            android:textSize="20sp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/menu_icon_shape_connect"
            app:srcCompat="@drawable/ic_connect_svg"
            android:scaleType="fitCenter"
            android:scaleX="1"
            android:scaleY="1"
            android:padding="@dimen/menu_icon_padding"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_activity_title"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/menu_button_connect"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="3dp"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="@dimen/h3_font_size" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>