<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:gravity="center_horizontal"
                                             android:orientation="vertical"
                                             tools:context="com.biomap.application.bio_app.Login.LoginActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497">

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1"/>

        <ImageView
            android:id="@+id/biomap_logo_imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="7dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/biomap_logo"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/biomap_text_imageView"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_logo_svg"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"/>

        <ImageView
            android:id="@+id/biomap_text_imageView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/biomap_logo_imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="6dp"
            android:contentDescription="@string/biomap_text_logo"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/login_form"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/biomap_logo_imageView"
            app:layout_constraintRight_toRightOf="@+id/biomap_logo_imageView"
            app:srcCompat="@drawable/ic_wordmark_tagline"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"/>

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/biomap_text_imageView"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/biomap_text_imageView"
            app:layout_constraintRight_toRightOf="@+id/biomap_text_imageView"
            tools:layout_constraintBottom_creator="1">


            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="344dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp">

                <EditText
                    android:id="@+id/profile_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    app:layout_constraintBottom_toTopOf="@+id/email"/>

                <EditText
                    android:id="@+id/profike_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    app:layout_constraintBottom_toTopOf="@+id/email"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                </android.support.design.widget.TextInputLayout>

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="36dp">

                    <CheckBox
                        android:id="@+id/checkBoxUlcers"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="0dp"
                        app:layout_constraintLeft_toLeftOf="parent"/>

                    <TextView
                        android:layout_width="328dp"
                        android:layout_height="0dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginStart="0dp"
                        android:gravity="center_vertical"
                        android:text="@string/ulcers_check_text"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/checkBoxUlcers"
                        app:layout_constraintTop_toTopOf="parent"/>

                </android.support.constraint.ConstraintLayout>

                <!-- Login progress -->
                <Button
                    android:id="@+id/profile_continue_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/continue_text"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="118dp"
                    tools:layout_editor_absoluteY="342dp"/>

                <!--Google sign in button -->

                <!-- Facebook Sign in button -->

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
