<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context="com.biomap.application.bio_app.Login.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/logo_login_register_imageview"
            android:layout_width="@dimen/biomap_register_login_logo_dim"
            android:layout_height="@dimen/biomap_register_login_logo_dim"
            android:contentDescription="@string/biomap_logo"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_logo_svg" />

        <ImageView
            android:id="@+id/logo_text_login_register_imageview"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/biomap_text_logo"
            app:srcCompat="@drawable/ic_wordmark_white" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:hint="Password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <!-- Login progress -->
            <Button
                android:id="@+id/email_register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="Register"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="118dp"
                tools:layout_editor_absoluteY="342dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="or"
                android:textSize="24sp" />
            <!--Google sign in button -->
            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_signin_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Facebook Sign in button -->

            <TextView
                android:id="@+id/login_from_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:text="Already have an account?"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
