<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.biomap.application.bio_app.Login.AccountActivity">


    <!-- Start of Logo & Wordmark -->
    <!-- End of Logo & Wordmark -->


    <LinearLayout
        android:id="@+id/greeting_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="287dp"
        android:gravity="center_horizontal"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <com.biomap.application.bio_app.Utility.CustomFontTextView
            android:id="@+id/helloText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="Hello"
            android:textSize="30sp"
            app:font="@string/font_name_gotham"
            app:textStyle="@integer/font_style_book"
            />

        <com.biomap.application.bio_app.Utility.CustomFontTextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:textSize="30sp"
            app:font="@string/font_name_gotham"
            app:textStyle="@integer/font_style_book"
            />

    </LinearLayout>

    <!--Update Profile Button-->
    <Button
        android:id="@+id/account_update_profile"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_google"
        android:gravity="center"
        android:text="Update\nProfile"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting_container"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"/>

    <!--Sign out Button-->
    <Button
        android:id="@+id/account_signOut_button"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_register"
        android:gravity="center"
        android:text="Sign Out"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_update_profile"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="102dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <!-- Logo -->
        <ImageView
            android:id="@+id/logo_login_register_imageview"
            android:layout_width="@dimen/biomap_register_login_logo_dim"
            android:layout_height="@dimen/biomap_register_login_logo_dim"
            android:contentDescription="@string/biomap_logo"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_logo_svg"/>

        <!-- Wordmark -->
        <ImageView
            android:id="@+id/logo_text_login_register_imageview"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/biomap_text_logo"
            app:srcCompat="@drawable/ic_wordmark_tagline"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
